# E3SM

./: e3sm_kessler_short_cpu.sh  e3sm_kessler_short_gpu.sh  e3sm_short_cldFrac_IO.sh  e3sm_short_dummyPhysics.sh  e3sm_short_stengel_CPP.sh  e3sm_short_stengel_CPP_gpu.sh  e3sm_short_stengel_fortran.sh  e3sm_short_stengel_fortran_gpu.sh  e3sm_short_stengel_fortran_nvidiacpu.sh  e3sm_short_stengel_fortran_nvidiagpu.sh  e3sm_short_stengel_python.sh  e3sm_short_test.sh  gpu_e3sm_short_test.sh
cime_config/machines/: config_batch.xml  config_machines.xml
cime_config/machines/cmake_macros/: intel-classic.cmake  intel-classic_derecho.cmake  intel_derecho.cmake  nvidia.cmake  nvidiagpu_derecho.cmake
components/eamxx/cime_config/: namelist_defaults_eamxx.xml
components/eamxx/cmake/machine-files/: derecho.cmake
components/eamxx/src/dynamics/homme/interface/: homme_grid_mod.F90
components/eamxx/src/mct_coupling/: CMakeLists.txt
components/eamxx/src/physics/: CMakeLists.txt  register_physics.hpp
components/eamxx/src/physics/cld_fraction/: eamxx_cld_fraction_process_interface.cpp
components/eamxx/src/physics/kessler/: CMakeLists.txt  README.md  eamxx_kessler_process_interface.cpp  eamxx_kessler_process_interface.hpp  kessler_functions.hpp
components/eamxx/src/physics/kessler/fortran_bridge/: kessler_eamxx_bridge.cpp  kessler_eamxx_bridge.hpp  kessler_eamxx_bridge_main.F90
components/eamxx/src/physics/stengel/: CMakeLists.txt  README.md  eamxx_stengel_process_interface.cpp  eamxx_stengel_process_interface.hpp  stengel.cpp  stengel_functions.hpp
components/eamxx/src/physics/stengel/fortran_bridge/: stengel_eamxx_bridge.cpp  stengel_eamxx_bridge.hpp  stengel_eamxx_bridge_main.F90
components/eamxx/src/physics/stengelF/: CMakeLists.txt  README.md  eamxx_stengelF_process_interface.cpp  eamxx_stengelF_process_interface.hpp  stengelF.cpp  stengelF_functions.hpp
components/eamxx/src/physics/stengelF/fortran_bridge/: stengelF_eamxx_bridge.cpp  stengelF_eamxx_bridge.hpp  stengelF_eamxx_bridge_main.F90  stengel_eamxx_bridge.cpp  stengel_eamxx_bridge.hpp
components/eamxx/src/physics/stengelP/: CMakeLists.txt  README.md  eamxx_stengelP_process_interface.cpp  eamxx_stengelP_process_interface.hpp  stengelP.cpp  stengelP.py  stengelP_functions.hpp
components/elm/src/main/: elm_varctl.F90
driver-mct/cime_config/: config_component.xml
